# src/Identity/Interface/Http/Requests/RefreshTokenRequest.php
@@ -1,0 +1,23 @@
+<?php
+
+declare(strict_types=1);
+
+namespace Identity\Interface\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+final class RefreshTokenRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /** @return array<string, mixed> */
+    public function rules(): array
+    {
+        return [
+            'refresh_token' => ['required', 'string'],
+        ];
+    }
+}
